ajout du template de base sur les pages

--- a/maquette/index.html
+++ b/maquette/index.html
@@ -25,9 +25,9 @@
                     </a>
                     <nav class="navbar">
                         <ul>
-                            <li><a href="">Cours </a></li>                            
-                            <li><a href="">Compte <span class="notif">1</span></a></li>
-                            <li><a href="">Messagerie<span class="notif">3</span></a></li>
+                            <li><a href="cours.html">Cours </a></li>                            
+                            <li><a href="compte.html">Compte <span class="notif">1</span></a></li>
+                            <li><a href="messagerie.html">Messagerie<span class="notif">3</span></a></li>
                             <li><a href="">Déconnexion</a></li>
                         </ul>
                     </nav>
@@ -37,9 +37,9 @@
                     <div class="mobile-menu display-none" id="mobile-menu-toggled">
                         <nav class="mobile-nav">
                             <ul>	
-                                <li><a href="">Cours</a></li>                            
-                                <li><a href="">Compte <span class="notif">1</span></a></li>
-                                <li><a href="">Messagerie <span class="notif">3</span></a></li>
+                                <li><a href="cours.html">Cours</a></li>                            
+                                <li><a href="compte.html">Compte <span class="notif">1</span></a></li>
+                                <li><a href="messagerie.html">Messagerie <span class="notif">3</span></a></li>
                                 <li><a href="">Déconnexion</a></li>
                             </ul>
                         </nav>
@@ -60,8 +60,8 @@
                                            
 
                 </div> -->
-                <button id="btnDarkMode" onclick="darkMode()"><i class="fas fa-moon"></i></button>
-                <button id="btnLightMode" onclick="lightMode()" style="display: none;"><i class="fas fa-sun"></i></button>
+                <!-- <button id="btnDarkMode" onclick="darkMode()"><i class="fas fa-moon"></i></button>
+                <button id="btnLightMode" onclick="lightMode()" style="display: none;"><i class="fas fa-sun"></i></button> -->
 
             </div>
 
